@startuml
interface "DatabaseDriver" as Target {
    + execute(sql, params)
    + query(sql, params)
    + end()
}

class PostgresDriver {
    - pool: Pool
    + execute(sql, params)
    + query(sql, params)
    + end()
}

class "pg.Pool" as Adaptee {
    + query(text, params)
    + end()
}

PostgresDriver ..|> Target : implements
PostgresDriver --> Adaptee : uses (adapts)
@enduml
